# CRNN_Captcha_Recognition

./: CMakeLists.txt  README.md  config.json  configs.json  data.py  dataset_preparer.py  evaluate.py  export_onnx.py  inference.cpp  model.py  model_metrics_plotter.py  requirements.txt  train.py  utils.py
ProjectA/main/: model.cpp  model.hpp
helper/: export_onnx.py
main/: data.cpp  data.hpp  main.cpp  util.cpp  util.hpp
